manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "82022401-ingress"
spec:
  ingressClassName: ingress-internal
  rules:
    - host: "app1.82022401.ce-aa.kubepia.net"
      http:
        paths:
          - path: /
            backend:
              service:
                name: my-82022401
                port:
                  number: 8080
            pathType: Prefix
